apps/bookinfo_disable/deployment.yml
##################################################################################################
# Reviews service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
    service: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-canary
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: reviews
spec:
  replicas: 3

  selector:
    matchLabels:
      app: reviews

  template:
    metadata:
      labels:
        app: reviews
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: docker.io/istio/examples-bookinfo-reviews-v1:1.20.3
        ports:
        - containerPort: 9080

  strategy:
    canary:
      stableService: reviews
      canaryService: reviews-canary

      trafficRouting:
        istio:
          virtualService:
            name: reviews
            routes:
            - primary

      steps:
      - setWeight: 10
      - pause: { duration: 30s }

      - setWeight: 25
      - pause: { duration: 1m }

      - setWeight: 50
      - pause: { duration: 2m }

      - setWeight: 100

      # 🔥 AUTO ROLLBACK trigger layer
      analysis:
        templates:
        - templateName: reviews-success-rate
